--- a/package.json
+++ b/package.json
@@ -5,21 +5,27 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export"
   },
   "dependencies": {
-    "@zeit/next-less": "^1.0.1",
-    "@zeit/next-typescript": "^1.1.1",
+    "antd": "^3.26.2",
     "axios": "^0.19.0",
+    "babel-plugin-import": "^1.13.0",
+    "less": "^3.10.3",
+    "less-vars-to-js": "^1.3.0",
     "moment": "^2.24.0",
-    "next": "^9.1.5",
     "nprogress": "^0.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "@babel/node": "^7.7.4",
-    "@babel/preset-env": "^7.7.6"
+    "@babel/preset-env": "^7.7.6",
+    "@zeit/next-less": "^1.0.1",
+    "@zeit/next-typescript": "^1.1.1",
+    "next": "^9.1.5"
   }
 }
