--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.24.0",
     "next-compose-plugins": "^2.2.0",
     "nprogress": "^0.2.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
