--- a/package.json
+++ b/package.json
@@ -28,8 +28,21 @@
     "@babel/preset-env": "^7.7.6",
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
+    "babel-eslint": "^10.0.3",
     "babel-plugin-import": "^1.13.0",
+    "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-standard": "^4.0.1",
     "next": "^9.1.5",
-    "null-loader": "^3.0.0"
+    "null-loader": "^3.0.0",
+    "prettier": "^1.19.1",
+    "webpack": "^4.41.3",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.0"
   }
 }
