less file loading fails

--- a/.babelrc
+++ b/.babelrc
@@ -4,8 +4,9 @@
     [
       "import", {
         "libraryName": "antd",
+        "libraryDirectory":"lib",
         "style": true
       },
     ]
-  ]
+  ],
 }
