--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "export": "next export"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-less": "^1.0.1",
+    "@zeit/next-typescript": "^1.1.1",
     "antd": "^3.26.2",
     "axios": "^0.19.0",
+    "css-loader": "^3.4.0",
     "less": "^3.10.3",
     "less-vars-to-js": "^1.3.0",
     "moment": "^2.24.0",
+    "next": "^9.1.6",
+    "next-antd-aza-less": "^1.0.2",
     "next-compose-plugins": "^2.2.0",
+    "next-images": "^1.2.0",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -26,8 +33,6 @@
   "devDependencies": {
     "@babel/node": "^7.7.4",
     "@babel/preset-env": "^7.7.6",
-    "@zeit/next-less": "^1.0.1",
-    "@zeit/next-typescript": "^1.1.1",
     "babel-eslint": "^10.0.3",
     "babel-plugin-import": "^1.13.0",
     "eslint": "^6.7.2",
@@ -38,11 +43,13 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-standard": "^4.0.1",
-    "next": "^9.1.5",
+    "file-loader": "^5.0.2",
+    "less-loader": "^5.0.0",
+    "mini-css-extract-plugin": "^0.8.2",
     "null-loader": "^3.0.0",
     "prettier": "^1.19.1",
-    "webpack": "^4.41.3",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.0"
+    "svg-react-loader": "^0.4.6",
+    "url-loader": "^3.0.0",
+    "webpack-filter-warnings-plugin": "^1.2.1"
   }
 }
