--- a/.babelrc
+++ b/.babelrc
@@ -5,8 +5,8 @@
       "import", {
         "libraryName": "antd",
         "libraryDirectory":"lib",
-        "style": true
-      },
+        "style": "less"
+      }
     ]
-  ],
+  ]
 }
