--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "recursive-copy": "^2.0.10",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "typewriter-effect": "^2.12.2"
   },
   "devDependencies": {
     "@babel/node": "^7.7.4",
