--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
+    "animate.css": "^3.7.2",
     "antd": "^3.26.2",
     "axios": "^0.19.0",
     "css-loader": "^3.4.0",
