--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@zeit/next-typescript": "^1.1.1",
     "animate.css": "^3.7.2",
     "antd": "^3.26.2",
+    "aos": "^3.0.0-beta.6",
     "axios": "^0.19.0",
     "css-loader": "^3.4.0",
     "less": "^3.10.3",
