--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
-    "animate.css": "^3.7.2",
     "antd": "^3.26.2",
     "aos": "^3.0.0-beta.6",
     "axios": "^0.19.0",
@@ -56,6 +55,7 @@
     "mini-css-extract-plugin": "^0.8.2",
     "null-loader": "^3.0.0",
     "prettier": "^1.19.1",
+    "react-motion": "^0.5.2",
     "svg-react-loader": "^0.4.6",
     "url-loader": "^3.0.0",
     "webpack-filter-warnings-plugin": "^1.2.1"
