--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-full-page": "^0.1.7",
     "react-helmet": "^5.2.1",
+    "react-motion": "^0.5.2",
+    "react-page-scroller": "^2.0.6-beta",
     "react-reveal": "^1.2.2",
     "react-scroll-parallax": "^2.3.1",
     "react-spring": "^8.0.27",
@@ -55,7 +58,6 @@
     "mini-css-extract-plugin": "^0.8.2",
     "null-loader": "^3.0.0",
     "prettier": "^1.19.1",
-    "react-motion": "^0.5.2",
     "svg-react-loader": "^0.4.6",
     "url-loader": "^3.0.0",
     "webpack-filter-warnings-plugin": "^1.2.1"
