--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "export": "next export"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.12.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-brands-svg-icons": "^5.12.1",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/react-fontawesome": "^0.1.8",
+    "@material-ui/core": "^4.9.1",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
+    "add": "^2.0.6",
     "antd": "^3.26.2",
     "aos": "^3.0.0-beta.6",
     "axios": "^0.19.0",
@@ -30,8 +35,8 @@
     "react-dom": "^16.12.0",
     "react-full-page": "^0.1.7",
     "react-helmet": "^5.2.1",
+    "react-icons": "2",
     "react-motion": "^0.5.2",
-    "react-page-scroller": "^2.0.6-beta",
     "react-reveal": "^1.2.2",
     "react-scroll-parallax": "^2.3.1",
     "react-spring": "^8.0.27",
@@ -40,7 +45,8 @@
     "styled-components": "^4.4.1",
     "styled-reset": "1.7.1",
     "styled-tools": "^1.7.1",
-    "typewriter-effect": "^2.12.2"
+    "typewriter-effect": "^2.12.2",
+    "yarn": "^1.22.0"
   },
   "devDependencies": {
     "@babel/node": "^7.7.4",
