--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "recursive-copy": "^2.0.10",
     "scrollmagic": "^2.0.7",
     "styled-components": "^4.4.1",
+    "styled-icons": "^9.3.0",
     "styled-reset": "1.7.1",
     "styled-tools": "^1.7.1",
     "typewriter-effect": "^2.12.2",
