--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start -p 8000",
     "export": "next export"
   },
+  "homepage": "./",
   "dependencies": {
     "@material-ui/core": "^4.9.1",
     "@zeit/next-css": "^1.0.1",
