--- a/.babelrc
+++ b/.babelrc
@@ -2,12 +2,17 @@
   "presets": ["next/babel"],
   "plugins": [
     [
+      "styled-components", { 
+      "ssr": true, 
+      "displayName": true, 
+      "preprocess": false 
+    } 
+    ],
+    [
       "import", {
         "libraryName": "antd",
-        "libraryDirectory":"lib",
-        "style": "less"
-      },
-    ],
-  ],
-  "ignore": ["node_modules"],
+        "style": true
+      }
+    ]
+  ]
 }
