--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^0.19.0",
     "css-loader": "^3.4.0",
+    "gensync": "^1.0.0-beta.1",
     "less": "^3.10.3",
     "less-vars-to-js": "^1.3.0",
     "moment": "^2.24.0",
