--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-blob": "^1.0.1",
     "react-dom": "^16.12.0",
     "react-full-page": "^0.1.7",
     "react-helmet": "^5.2.1",
@@ -41,6 +42,7 @@
     "scrollmagic": "^2.0.7",
     "styled-components": "^4.4.1",
     "styled-icons": "^9.3.0",
+    "styled-jsx": "^3.2.4",
     "styled-reset": "1.7.1",
     "styled-tools": "^1.7.1",
     "typewriter-effect": "^2.12.2",
