--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,16 @@
 {
-  "presets": ["next/babel"],
-  "plugins": [
+  "presets": [
     [
-      "styled-components", { 
-      "ssr": true, 
-      "displayName": true, 
-      "preprocess": false 
-      } 
-    ],
+      "next/babel",
+      {
+        "styled-jsx": {
+          "plugins": [["styled-jsx-plugin-postcss", { "path": "./postcss.config.js"} ]]
+        }
+      }
+    ]
+  ],
+  "plugins": [
+    "@babel/plugin-transform-react-jsx",
     [
       "styled-jsx/babel"
     ],
@@ -16,6 +19,13 @@
         "libraryName": "antd",
         "style": true
       }
+    ],
+    [
+      "styled-components", { 
+      "ssr": true, 
+      "displayName": true, 
+      "preprocess": false 
+      } 
     ]
   ]
 }
