--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "gensync": "^1.0.0-beta.1",
     "less": "^3.10.3",
     "less-vars-to-js": "^1.3.0",
+    "lost": "^8.3.1",
     "moment": "^2.24.0",
     "next": "^9.1.6",
     "next-compose-plugins": "^2.2.0",
     "next-images": "^1.2.0",
     "nprogress": "^0.2.0",
+    "postcss-nested": "^4.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
@@ -40,9 +42,10 @@
     "react-spring": "^8.0.27",
     "recursive-copy": "^2.0.10",
     "scrollmagic": "^2.0.7",
-    "styled-components": "^4.4.1",
+    "styled-components": "^5.0.1",
     "styled-icons": "^9.3.0",
     "styled-jsx": "^3.2.4",
+    "styled-jsx-plugin-postcss": "^2.0.1",
     "styled-reset": "1.7.1",
     "styled-tools": "^1.7.1",
     "typewriter-effect": "^2.12.2",
@@ -50,7 +53,9 @@
   },
   "devDependencies": {
     "@babel/node": "^7.7.4",
+    "@babel/plugin-transform-react-jsx": "^7.8.3",
     "@babel/preset-env": "^7.7.6",
+    "autoprefixer": "^9.7.4",
     "babel-eslint": "^10.0.3",
     "babel-plugin-import": "^1.13.0",
     "eslint": "^6.7.2",
@@ -64,10 +69,19 @@
     "file-loader": "^5.0.2",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.8.2",
+    "node-sass": "^4.13.1",
     "null-loader": "^3.0.0",
     "prettier": "^1.19.1",
+    "sass-loader": "^8.0.2",
+    "styled-jsx-plugin-sass": "^1.0.0",
     "svg-react-loader": "^0.4.6",
     "url-loader": "^3.0.0",
     "webpack-filter-warnings-plugin": "^1.2.1"
+  },
+  "postcss": {
+    "plugins": {
+      "lost": {},
+      "postcss-nested": {}
+    }
   }
 }
