--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-scroll": "^1.7.16",
     "react-scroll-parallax": "^2.3.1",
     "react-spring": "^8.0.27",
+    "react-wavify": "^1.2.3",
     "recursive-copy": "^2.0.10",
     "scrollmagic": "^2.0.7",
     "styled-components": "^5.0.1",
