--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,44 +1,42 @@
 {
-    "parser": "babel-eslint",
-    "env": {
-      "browser": true,
-      "node": true,
-      "jest": true,
-      "es6": true
+  "parser": "babel-eslint",
+  "env": {
+    "browser": true,
+    "node": true,
+    "jest": true,
+    "es6": true
+  },
+  "extends": [
+    "airbnb-base",
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "standard",
+    "plugin:prettier/recommended",
+    "eslint-config-prettier"
+  ],
+  "globals": {
+    "Atomics": "readonly",
+    "SharedArrayBuffer": "readonly",
+    "React": "writable"
+  },
+  "plugins": ["promise", "react", "prettier"],
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
     },
-    "extends": [
-      "eslint:recommended",
-      "plugin:react/recommended",
-      "standard",
-      "plugin:prettier/recommended"
+    "ecmaVersion": 2018,
+    "sourceType": "module"
+  },
+  "rules": {
+    "eol-last": ["error", "always"],
+    "no-multiple-empty-lines": [
+      "error",
+      { "max": 1, "maxEOF": 0, "maxBOF": 0 }
     ],
-    "globals": {
-                "Atomics": "readonly",
-                "SharedArrayBuffer": "readonly",
-                "React": "writable"
-            },
-    "plugins": [
-      "promise",
-      "react", 
-      "standard",
-      "prettier"
-    ],
-    "parserOptions": {
-                "ecmaFeatures": {
-                    "jsx": true
-                },
-                "ecmaVersion": 2018,
-                "sourceType": "module"
-            },
-    "rules": {
-      "eol-last": ["error", "always"],
-      "no-multiple-empty-lines": [
-        "error", { "max": 1, "maxEOF": 0, "maxBOF": 0 }
-      ],
-      "object-curly-spacing": [2, "always"],
-      "react/prop-types": "off",
-      "react/react-in-jsx-scope": "off",
-      "import/no-webpack-loader-syntax": "off",
+    "object-curly-spacing": [2, "always"],
+    "react/prop-types": "off",
+    "react/react-in-jsx-scope": "off",
+    "import/no-webpack-loader-syntax": "off",
     "prettier/prettier": "error"
-    }
   }
+}
