--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "next -- -p 3003",
-    "build": "npm i && next build",
+    "build": "next build",
     "start": "next start -p 8000",
     "export": "next export",
     "lint": "eslint ."
